# secretsweeper

./: .gitignore  LICENSE  README.md  build.py  build.zig  pre-build.sh  pyproject.toml
.github/workflows/: ci.yml  default.yml  old.yml  publish.yml  test.yml
secretsweeper/: __init__.py  _core.pyi
src/: aho.zig  core.zig
test/: test_secretsweeper.py
